[fix] swagger
